WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
116655
WebFrameProxy::didFailLoad clears frame title for no apparent reason
https://bugs.webkit.org/show_bug.cgi?id=116655
Summary
WebFrameProxy::didFailLoad clears frame title for no apparent reason
Santosh Mahto
Reported
2013-05-23 03:43:45 PDT
void WebFrameProxy::didFailLoad() { ........ ..... m_title = String(); // causing title to empty even though Page(and title) is displayed } When Page loading is stopped before load is finished. we should not set the title to empty string We still have the content to display on screen(we have full Frame & dom tree present). So if page is stopped the UI process always get the empty title even though the page related to that title exists.
Attachments
Patch
(1.30 KB, patch)
2013-05-23 03:53 PDT
,
Santosh Mahto
no flags
Details
Formatted Diff
Diff
Patch
(1.24 KB, patch)
2013-05-23 19:46 PDT
,
Santosh Mahto
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Santosh Mahto
Comment 1
2013-05-23 03:53:13 PDT
Created
attachment 202657
[details]
Patch
Alexey Proskuryakov
Comment 2
2013-05-23 10:52:24 PDT
One thing that's very helpful to do in cases like this is svn blame, which may explain rationale behind the code. Here, it points to <
http://trac.webkit.org/changeset/74282
>. As you can see, the behavior was chosen conscientiously, and even mentioned in ChangeLog .
Alexey Proskuryakov
Comment 3
2013-05-23 10:53:30 PDT
Comment on
attachment 202657
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=202657&action=review
But I still agree that the behavior is wrong.
> Source/WebKit2/ChangeLog:3 > + [WebFrameProxy::didFailLoad] title becomes empty even though Page(and title) is
Please update the title in ChangeLog to match Bugzilla. We use brackets in title for a very specific purpose (marking patches that are of limited interest only).
Santosh Mahto
Comment 4
2013-05-23 19:46:27 PDT
Created
attachment 202757
[details]
Patch
Santosh Mahto
Comment 5
2013-05-24 18:33:15 PDT
(In reply to
comment #3
)
> (From update of
attachment 202657
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=202657&action=review
> > But I still agree that the behavior is wrong. > > > Source/WebKit2/ChangeLog:3 > > + [WebFrameProxy::didFailLoad] title becomes empty even though Page(and title) is > > Please update the title in ChangeLog to match Bugzilla. > > We use brackets in title for a very specific purpose (marking patches that are of limited interest only).
Hi I updated the changLog as requested. please give +1 for this patch
Vivek Galatage
Comment 6
2013-05-25 11:15:31 PDT
cq+
WebKit Commit Bot
Comment 7
2013-05-25 11:35:29 PDT
Comment on
attachment 202757
[details]
Patch Clearing flags on attachment: 202757 Committed
r150689
: <
http://trac.webkit.org/changeset/150689
>
WebKit Commit Bot
Comment 8
2013-05-25 11:35:33 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug