WebFrameProxy::didFailLoad clears frame title for no apparent reason https://bugs.webkit.org/show_bug.cgi?id=116655

Patch by Santosh Mahto <santosh.ma@samsung.com> on 2013-05-25
Reviewed by Alexey Proskuryakov.

* UIProcess/WebFrameProxy.cpp:
(WebKit::WebFrameProxy::didFailLoad):

Canonical link: https://commits.webkit.org/135061@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150689 268f45cc-cd09-0410-ab3c-d52691b4dbfc